--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"chai-bignumber": "3.1.0",
 		"identicon.js": "^2.3.3",
 		"npm-check-updates": "^16.3.15",
+		"postcss-normalize": "^10.0.1",
 		"react": "^18.2.0",
 		"react-bootstrap": "2.5.0",
 		"react-dom": "18.2.0",
